[Polyam] Fix badly visible focus outlines in composer
Port a9e228361ca862f143e57debca7eccde52bb4797 to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/mastodon/components.scss
+++ b/app/javascript/flavours/polyam/styles/mastodon/components.scss
@@ -635,11 +635,6 @@ body > [data-popper-placement] {
     gap: 8px;
     margin: 8px;
     flex-wrap: wrap;
-
-    & > div {
-      overflow: hidden;
-      display: flex;
-    }
   }
 
   &__uploads {
@@ -820,7 +815,6 @@ body > [data-popper-placement] {
     display: flex;
     flex: 1 0 100%; // glitch: always on its own line
     max-width: 100%;
-    overflow: hidden;
     gap: 5px; // glitch: handle secondary post privacy
     align-items: stretch; // glitch: handle secondary post privacy
 
@@ -991,6 +985,11 @@ body > [data-popper-placement] {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+
+  &:focus-visible {
+    outline: var(--outline-focus-default);
+    outline-offset: 2px;
+  }
 
   &[disabled] {
     cursor: default;
